working on anomaly detection
Signed-off-by: Fatih Durmaz <mail.fatih.durmaz@gmail.com>

--- a/preprocessing/data_gen.ipynb
+++ b/preprocessing/data_gen.ipynb
@@ -468,6 +468,49 @@
    "source": [
     "print(day_gen.get_next_day())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('df_filtered_extended_final.csv')\n",
+    "df['GMT_date'] = pd.to_datetime(df['GMT_date'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Object_ID    0\n",
+       "HeartRate    0\n",
+       "GMT_date     0\n",
+       "Species      0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
   }
  ],
  "metadata": {
