--- a/detecor/anomaly_detection.ipynb
+++ b/detecor/anomaly_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,20 +41,199 @@
     "INFLUXDB_BUCKET=\"example_bucket\"\n",
     "INFLUXDB_URL=\"http://localhost:8086\"\n",
     "\n",
-    "client = InfluxDBClient(url=INFLUXDB_URL, token=INFLUXDB_TOKEN, org=INFLUXDB_ORG)\n",
-    "\n",
-    "# Create a QueryAPI instance\n",
-    "query_api = client.query_api(query_options=QueryOptions(profilers=[]))\n",
-    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        noisy             original_time  threshold_anomaly  anomaly\n",
+      "3   71.067422 2018-07-23 09:00:00+00:00               True     True\n",
+      "4   70.323179 2018-07-23 12:00:00+00:00               True     True\n",
+      "5   70.554334 2018-07-23 15:00:00+00:00               True     True\n",
+      "6   71.103025 2018-07-23 18:00:00+00:00               True     True\n",
+      "15  71.463617 2018-07-26 09:00:00+00:00               True     True\n",
+      "16  70.765219 2018-07-26 12:00:00+00:00               True     True\n",
+      "17  70.815922 2018-07-26 15:00:00+00:00               True     True\n",
+      "18  70.286680 2018-07-26 18:00:00+00:00               True     True\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime, timezone\n",
+    "import time\n",
+    "\n",
+    "\n",
+    "class AnomalyDetector():\n",
+    "    def __init__(self,client):\n",
+    "        self.client = client\n",
+    "        self.query_api = client.query_api(query_options=QueryOptions(profilers=[]))\n",
+    "        self.training_df = pd.DataFrame()\n",
+    "        self.upcoming_df = pd.DataFrame()\n",
+    "        \n",
+    "    \n",
+    "    def run(self):\n",
+    "        self.get_dataframe_initial()\n",
+    "        #self.train_model()\n",
+    "        while True:\n",
+    "            new_df = self.get_dataframe_starting(self.last_pull_time.isoformat())\n",
+    "            # HERE TEST THIS NEW DATA FOR ANOMALY DETECTION.\n",
+    "            if new_df.empty:\n",
+    "                time.sleep(5)\n",
+    "                continue\n",
+    "            \n",
+    "            anomaly_flagged_df = self.detect_anomalies(new_df)\n",
+    "            only_anomaly = (anomaly_flagged_df[anomaly_flagged_df.anomaly])\n",
+    "            if only_anomaly.empty:\n",
+    "                time.sleep(5)\n",
+    "                continue\n",
+    "            print(only_anomaly)\n",
+    "            # ADD NON-ANOMALY DATA TO BUFFER FOR TRAINIG\n",
+    "            self.extend_non_anomaly_df(anomaly_flagged_df)\n",
+    "            \n",
+    "            # IF BUFFER HAS ONE YEAR, TRAIN NEW DATA   \n",
+    "            if self.has_one_year(self.upcoming_df):\n",
+    "                self.training_df = self.upcoming_df\n",
+    "                self.upcoming_df = pd.DataFrame()\n",
+    "            \n",
+    "            break\n",
+    "            time.sleep(5)\n",
+    "            \n",
+    "    def has_one_year(self, df):\n",
+    "        time_span = df['original_time'].max() - df['original_time'].min()\n",
+    "        return time_span >= pd.Timedelta(days=365)\n",
+    "    \n",
+    "    def extend_non_anomaly_df(self,flagged_df):\n",
+    "        #get non_anomaly data\n",
+    "        non_anomaly_data= flagged_df[~flagged_df.anomaly][['noisy','original_time']]\n",
+    "        \n",
+    "        # extend future training data\n",
+    "        self.upcoming_df = pd.concat([self.upcoming_df,non_anomaly_data])\n",
+    "    \n",
+    "    def train_model(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def detect_anomalies(self, new_df):\n",
+    "        # Simple Anomaly Detection (Just for testing the class)\n",
+    "        new_df['threshold_anomaly'] = new_df['noisy'] > 70\n",
+    "        \n",
+    "        \n",
+    "        # Final decision for classification\n",
+    "        new_df['anomaly'] = new_df['threshold_anomaly'] \n",
+    "        return new_df\n",
+    "    \n",
+    "    def get_dataframe_starting(self, starting_time):\n",
+    "        query = f'''\n",
+    "        from(bucket: \"{INFLUXDB_BUCKET}\")\n",
+    "                |> range(start: {starting_time})\n",
+    "                |> filter(fn: (r) => r._measurement == \"heart_rate\")\n",
+    "                |> filter(fn: (r) => r._field == \"noisy\" or r._field == \"original_time\")\n",
+    "                |> pivot(rowKey:[\"_time\"], columnKey: [\"_field\"], valueColumn: \"_value\")\n",
+    "                |> keep(columns: [\"noisy\", \"original_time\"])\n",
+    "        '''\n",
+    "        df = self.query_api.query_data_frame(query=query)\n",
+    "        client.close()\n",
+    "        if not df.empty:\n",
+    "            df.drop(columns=['table','result'],inplace=True)\n",
+    "            df['original_time'] = pd.to_datetime(df['original_time'])\n",
+    "            self.last_pull_time = datetime.now().replace(tzinfo=timezone.utc)\n",
+    "        return  df\n",
+    "    \n",
+    "    def get_dataframe_initial(self):\n",
+    "        checkpoint_df = self.get_dataframe_starting('-5h')\n",
+    "        latest_time = checkpoint_df['original_time'].max()\n",
+    "        one_year_before_latest = latest_time - pd.DateOffset(years=1)\n",
+    "        training_df = checkpoint_df[checkpoint_df['original_time'] >= one_year_before_latest]\n",
+    "\n",
+    "        self.training_df = training_df\n",
+    "\n",
+    "\n",
+    "client = InfluxDBClient(url=INFLUXDB_URL, token=INFLUXDB_TOKEN, org=INFLUXDB_ORG)\n",
+    "ad = AnomalyDetector(client)\n",
+    "ad.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>noisy</th>\n",
+       "      <th>original_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12033</th>\n",
+       "      <td>70.090403</td>\n",
+       "      <td>2025-05-07 18:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12034</th>\n",
+       "      <td>70.301699</td>\n",
+       "      <td>2025-05-08 09:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12035</th>\n",
+       "      <td>69.996953</td>\n",
+       "      <td>2025-05-08 12:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12036</th>\n",
+       "      <td>71.090618</td>\n",
+       "      <td>2025-05-08 15:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12037</th>\n",
+       "      <td>70.555684</td>\n",
+       "      <td>2025-05-08 18:00:00+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           noisy             original_time\n",
+       "12033  70.090403 2025-05-07 18:00:00+00:00\n",
+       "12034  70.301699 2025-05-08 09:00:00+00:00\n",
+       "12035  69.996953 2025-05-08 12:00:00+00:00\n",
+       "12036  71.090618 2025-05-08 15:00:00+00:00\n",
+       "12037  70.555684 2025-05-08 18:00:00+00:00"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#%%\n",
     "query = f'''\n",
@@ -73,7 +252,7 @@
     "one_year_before_latest = latest_time - pd.DateOffset(years=1)\n",
     "training_df = checkpoint_df[checkpoint_df['original_time'] >= one_year_before_latest]\n",
     "\n",
-    "\n",
+    "training_df.head()\n",
     "\n",
     "# HERE TRAIN DATA USING TRAINING DF\n",
     "# trainanomalymodel(training_df)"
